--- a/package.json
+++ b/package.json
@@ -1,28 +1,27 @@
 {
-  "name": "zentra-backend",
+  "name": "betting-app",
   "version": "1.0.0",
-  "description": "a backend monolith for the zentra app.",
+  "description": "A Nigerian app for betting on games",
   "main": "app.js",
   "scripts": {
-    "test": "start"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Zenn-LLC/zentra-backend.git"
+    "start": "nodemon app.js"
   },
   "author": "Azi",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Zenn-LLC/zentra-backend/issues"
-  },
-  "homepage": "https://github.com/Zenn-LLC/zentra-backend#readme",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "nodemon": "^3.1.10",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.2",
+    "nodemon": "^3.0.1",
     "paystack": "^2.0.1",
-    "redis": "^5.8.2",
+    "serverless-http": "^3.2.0",
+    "twilio": "^4.18.1",
     "ws": "^8.18.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
